# flowkey-linux

./: .gitignore  BUILD_INSTALLER.cmd  CHANGELOG.md  INSTALL.cmd  LICENSE  MANIFEST.in  README.md  TODO.md  flm-tui.md  flowkey.spec  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: grammar_hotkey.config.example.json
installer/: README.md  bootstrap.cmd  bootstrap.ps1  build.ps1  fastflowprompt.spec  install.ps1  installer.iss  sign.ps1
installer/certs/: .gitignore
release/scripts/: ffp_daemon.py
release/scripts/ui/: notifications.ahk
release/tests/: test_ffp_daemon.py
scripts/: _version.py  actions.py  benchmark.py  build_frozen.py  chat_popup.py  config.py  config.seed.json  daemon.py  dashboard.py  engine.py  ffchat.py  ffp_benchmark.py  ffp_config.py  ffp_daemon.py  ffp_flm_server.py  ffp_llm_client.py  ffp_notify.py  ffp_pull.py  ffp_telemetry.py  ffp_tools.py  ffp_updater.py  first_run.py  flm_server.py  flowkey.py  grammarFix.ahk  grammar_fix.py  install.py  launcher.py  listener.py  llm_client.py  loopback_http.py  notes.py  notify.py  paths.py  pull.py  subprocess_util.py  telemetry.py  tools.py  tray.py  updater.py  (+1 more)
scripts/lib/: classify.ahk  clipboard.ahk  daemon_client.ahk  hotkeys.ahk  json.ahk  mode_prefix.ahk  paths.ahk
scripts/tui/: __init__.py  app.py  chat.py  dashboard.py
scripts/tui/dashboard/: __init__.py  _daemon.py  benchmark.py  chat_settings.py  config.py  flm_panel.py  hotkeys.py  input_processing.py
scripts/tui/dashboard/config_pane/: __init__.py  chat_panel.py  chat_settings.py  flm.py  flm_panel.py  flm_runtime.py  hotkeys.py  input_processing.py
scripts/ui/: dashboard.ahk  dashboard_handlers.ahk  notifications.ahk  tray.ahk
setup/: bootstrap_release.sh  install_release.cmd  install_release.ps1  install_release.sh
setup/defaults/: grammar_hotkey.config.example.json  grammar_hotkey.config.json
tests/: conftest.py  test_chat_popup.py  test_classify_clipboard.ahk  test_config.py  test_daemon.py  test_engine.py  test_ffp_config.py  test_ffp_daemon.py  test_ffp_flm_server.py  test_ffp_notify.py  test_flm_server.py  test_flowkey.py  test_grammar_fix.py  test_install_smoke.py  test_launcher.py  test_listener.py  test_loopback_http.py  test_notes_search.py  test_notify.py  test_parse_mode.ahk  test_paths.py  test_pull.py  test_subprocess_util.py
