# Flowkey — Linux Port
#
#   pip install .                # production
#   pip install -e .             # editable, for development
#   python -m build --wheel      # produces dist/flowkey-X.Y.Z-py3-none-any.whl
#
# After install, a single `flowkey` command lands in your PATH.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowkey"
version = "2.0.0-dev"
description = "Local-LLM-powered grammar fix, prompt rewrite, chat, and dashboard for Linux."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Arseniy Grechenkov" },
    { name = "Flowkey Linux Contributors" },
]
keywords = ["llm", "grammar", "hotkey", "fastflowlm", "local-ai", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Wayland",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]

dependencies = [
    "packaging>=23",
    "pyperclip>=1.8",
    "textual>=8.0",
]

[project.optional-dependencies]
x11 = ["pynput>=1.7"]
wayland = ["evdev>=1.7", "dasbus>=1.7"]
tray = ["pystray>=0.19"]
readability = ["trafilatura>=1.8"]
dev = [
    "build>=1.0",
    "pyinstaller>=6.0",
    "ruff>=0.4",
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/jpnski/flowkey-linux"
Issues = "https://github.com/jpnski/flowkey-linux/issues"

[project.scripts]
flowkey = "flowkey:main"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "scripts" }
packages = { find = { where = ["scripts"], include = ["tui*"] } }
py-modules = [
    "daemon",
    "benchmark",
    "config",
    "flm_server",
    "engine",
    "install",
    "listener",
    "llm_client",
    "launcher",
    "loopback_http",
    "flowkey",
    "notes",
    "notify",
    "paths",
    "pull",
    "subprocess_util",
    "telemetry",
    "tools",
    "tray",
    "updater",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",
]
