# ffchat — TUI chat frontend for FastFlowLM
#
#   pip install -e .            # local development
#   pip install .               # user install
#   python -m build --wheel     # produces dist/ffchat-X.Y.Z-py3-none-any.whl
#
# After install, a single `ffchat` command lands in your PATH.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffchat"
version = "0.1.0"
description = "TUI chat frontend for FastFlowLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Arseniy Grechenkov" },
    { name = "Flowkey Linux Contributors" },
]
keywords = ["llm", "fastflowlm", "local-ai", "chat", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = [
    "packaging>=23",
    "pyperclip>=1.8",
    "textual>=8.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "ruff>=0.4",
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/jpnski/flowkey-linux"
Issues = "https://github.com/jpnski/flowkey-linux/issues"

[project.scripts]
ffchat = "ffchat:main"

[tool.setuptools]
package-dir = { "" = "scripts" }
packages = { find = { where = ["scripts"], include = ["tui*"] } }
py-modules = [
    "ffchat",
    "benchmark",
    "config",
    "flm_server",
    "engine",
    "llm_client",
    "launcher",
    "paths",
    "pull",
    "subprocess_util",
    "telemetry",
    "version",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",
]
